--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --primary-white: #ffffff;
   --border-color: #e7e9fc;
   --lightslate: #8e8f99;
+  --green-icon: #31d0aa;
 }
 
 /**
@@ -95,6 +96,8 @@ img {
 .page-header {
   border-bottom: 1px solid var(--border-color);
   background: var(--primary-white);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 /* logo */
@@ -136,6 +139,7 @@ nav {
   padding-top: 24px;
   padding-bottom: 24px;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list-link:hover,
@@ -205,6 +209,7 @@ nav {
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
@@ -234,6 +239,7 @@ nav {
   min-width: 169px;
   height: 56px;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -245,7 +251,10 @@ nav {
 .advantages-list-wrapper {
   background-color: var(--light-bg);
   border-radius: 4px;
-  padding: 24px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
   margin-bottom: 8px;
 }
 
@@ -377,6 +386,12 @@ nav {
   width: 40px;
   height: 40px;
   background-color: var(--primary-interactive-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-socials-list-link:hover,
+.team-socials-list-link:focus {
+  background-color: var(--active-color);
 }
 
 .team-social-list-icon {
@@ -407,17 +422,32 @@ nav {
 }
 
 .customers-list-item {
+  display: flex;
   width: 168px;
   height: 88px;
+}
+
+.customers-list-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  border: 1px solid var(--lightslate);
+  color: var(--lightslate);
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 4px;
-  border: 1px solid var(--lightslate);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-list-link:hover,
+.customers-list-link:focus {
+  border-color: var(--active-color);
+  color: var(--active-color);
 }
 
 .customers-list-icon {
-  fill: var(--lightslate);
+  fill: currentColor;
 }
 
 /* footer */
@@ -436,6 +466,10 @@ nav {
   padding: 100px 0;
 }
 
+.footer-logo-wrapper {
+  margin-right: 120px;
+}
+
 .footer-desc {
   color: var(--light-bg);
   line-height: 1.5;
@@ -445,7 +479,7 @@ nav {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
 .social-media-desc {
@@ -461,6 +495,14 @@ nav {
 .team-socials-list-footer {
   display: flex;
   gap: 16px;
+}
+
+.team-socials-link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-socials-link:hover,
+.team-socials-link:focus {
+  background-color: var(--green-icon);
 }
 
 /**
