--- a/css/styles.css
+++ b/css/styles.css
@@ -603,22 +603,86 @@ nav {
   width: 100%;
   height: 100%;
   background-color: var(--primary-interactive-color);
-  padding-top: 40px;
-  padding-right: 32px;
-  padding-left: 32px;
+  padding: 40px 32px;
   padding-bottom: 164px;
   transform: translateY(100%);
   color: var(--light-bg);
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.products-list-link:hover .overlay {
-  transform: translateY(0);
+.products-list-link:hover .overlay,
+.products-list-link:focus .overlay {
+  transform: translateY(0%);
 }
 .product-wrapper {
   padding: 32px 16px;
   border: 1px solid var(--border-color);
   border-top: none;
   background: var(--primary-white);
+}
+
+/**
+  |============================
+  | MODAL WINDOV
+  |============================
+*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(46, 47, 66, 0.4);
+  transition: opacity 300ms ease-out, visibilitty 300ms ease-out;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.modal {
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  background: #fcfcfc;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  opacity: 1;
+  transition: transform 300ms ease-in 300ms, opacity 300ms ease-in 300ms;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translateX(-50%) translateY(-70%);
+  opacity: 0;
+}
+.modal-btn {
+  width: 24px;
+  height: 24px;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--border-color);
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
+
+.modal-btn-icon {
 }
