--- a/css/styles.css
+++ b/css/styles.css
@@ -636,7 +636,8 @@ nav {
   height: 100%;
 
   background: rgba(46, 47, 66, 0.4);
-  transition: opacity 300ms ease-out, visibilitty 300ms ease-out;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -652,7 +653,7 @@ nav {
 }
 .modal {
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
   background: #fcfcfc;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
@@ -660,9 +661,9 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translate(-50%, -50%) scale(1);
   opacity: 1;
-  transition: transform 300ms ease-in 300ms, opacity 300ms ease-in 300ms;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
@@ -672,7 +673,7 @@ nav {
 .modal-btn {
   width: 24px;
   height: 24px;
-  border-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: var(--border-color);
   padding: 0;
@@ -682,7 +683,20 @@ nav {
   position: absolute;
   top: 24px;
   right: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon {
+  fill: var(--primary-white);
+}
 .modal-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
